--- a/assets/locale/shared/data/locale/pt-BR.txt
+++ b/assets/locale/shared/data/locale/pt-BR.txt
@@ -33,7 +33,7 @@ pause_exit_to_menu: "Voltar ao Menu"
 pause_back: "Voltar"
 practice_mode: "Modo Prática"
 charting_mode: "Modo Charter"
-blueballed: "Broxadas: {1}"
+blueballed: "{1} Tentativas Fracassadas"
 
 // Main Menu
 images/mainmenu/menu_story_mode: "images/pt-BR/mainmenu/menu_story_mode"
@@ -42,10 +42,6 @@ images/mainmenu/menu_credits: "images/pt-BR/mainmenu/menu_credits"
 // Story Mode
 images/Menu_Tracks: "images/pt-BR/Menu_Tracks"
 week_score: "PONTUAÇÃO: {1}"
-
-storyname_week5: "Nevasca Vermelha"
-storyname_week6: "Simulador de Confronto (ft. moawling)"
-storyname_weekend1: "Dívidas Fora do Prazo"
 
 // Freeplay
 personal_best: "MELHOR PONTUAÇÃO: {1} ({2}%)"
